--- a/frontend/cabmanager/package.json
+++ b/frontend/cabmanager/package.json
@@ -15,10 +15,12 @@
     "react": "^18.2.0",
     "react-bootstrap-typeahead": "^6.2.3",
     "react-dom": "^18.2.0",
+    "react-persist": "^1.0.2",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
