--- a/frontend/cabmanager/package.json
+++ b/frontend/cabmanager/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-bootstrap-typeahead": "^6.2.3",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-persist": "^1.0.2",
     "react-redux": "^8.0.7",
