--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.1.4",
         "express": "^4.18.2",
         "mongoose": "^7.2.2",
-        "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22",
+        "winston": "^3.9.0"
     }
 }
