--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.1.4",
         "express": "^4.18.2",
+        "fs": "^0.0.1-security",
         "mongoose": "^7.2.2",
         "nodemon": "^2.0.22",
         "winston": "^3.9.0"
