--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.1.4",
         "express": "^4.18.2",
         "fs": "^0.0.1-security",
         "helmet": "^7.0.0",
+        "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.2.2",
         "nodemon": "^2.0.22",
         "winston": "^3.9.0"
