--- a/frontend/cabmanager/package.json
+++ b/frontend/cabmanager/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap-typeahead": "^6.2.3",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-persist": "^1.0.2",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
