--- a/frontend/cabmanager/package.json
+++ b/frontend/cabmanager/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.12.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "react-virtualized-auto-sizer": "^1.0.20",
+    "react-window": "^1.8.9",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
