added log rotation, changed log format,added driver validation backend

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 /backend/config/config.env
 /backend/config/cert.pem
 /backend/config/key.pem
-/backend/combined.log
-/backend/onlyError.log
+*.log
+*audit.json
