--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.2.2",
         "nodemon": "^2.0.22",
-        "winston": "^3.9.0"
+        "winston": "^3.9.0",
+        "winston-daily-rotate-file": "^4.7.1"
     }
 }
