--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
         "fs": "^0.0.1-security",
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.0",
+        "memory-cache": "^0.2.0",
         "mongoose": "^7.2.2",
         "nodemon": "^2.0.22",
         "winston": "^3.9.0",
