--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.0",
         "memory-cache": "^0.2.0",
+        "mongodb-snapshot": "^1.4.1",
         "mongoose": "^7.2.2",
         "nodemon": "^2.0.22",
         "winston": "^3.9.0",
