--- a/frontend/cabmanager/package.json
+++ b/frontend/cabmanager/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-persist": "^1.0.2",
+    "react-photo-view": "^1.2.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "react-scripts": "^5.0.1",
