--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,14 @@
         "dotenv": "^16.1.4",
         "express": "^4.18.2",
         "fs": "^0.0.1-security",
+        "generate-password": "^1.7.0",
         "helmet": "^7.0.0",
         "jsonwebtoken": "^9.0.0",
+        "mailgen": "^2.0.27",
         "memory-cache": "^0.2.0",
         "mongodb-snapshot": "^1.4.1",
         "mongoose": "^7.2.2",
+        "nodemailer": "^6.9.3",
         "nodemon": "^2.0.22",
         "winston": "^3.9.0",
         "winston-daily-rotate-file": "^4.7.1"
