--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "client": "npm start --prefix frontend",
     "watch": "concurrently 'npm:server' 'npm:client' ",
     "deploy": "npm run build --prefix frontend && npm start --prefix backend",
-    "test": "jest --detectOpenHandles"
-  
+    "test": "jest --detectOpenHandles",
+    "install-backend":"cd backend &&npm i",
+    "install-frontend":"cd frontend/cabmanager &&npm i",
+    "installs":"npm run install-backend && npm run install-frontend"
   },
   "repository": {
     "type": "git",
